--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "framer-motion": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mysql2": "^3.12.0",
